test/mutation_analysis/s0067_add_binary/hafis/starchat/mutants/17/result.txt
./test/mutation_analysis/s0067_add_binary/hafis/starchat/mutants/17/Solution.java:36: error: unreachable statement
        if (carry != 0) {
        ^
1 error
